USe immutable runtime context rather than passing around config object. All works other than remote enclave test and a few outstanding coverage problems.