@@ -15,6 +15,9 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.*;
 import java.util.stream.Collectors;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import suite.EnclaveType;
 import suite.ExecutionContext;
 import suite.NodeAlias;
@@ -22,6 +25,8 @@ import suite.NodeId;
 import suite.SocketType;
 
 public class ConfigGenerator {
+
+    private static final Logger LOGGER = LoggerFactory.getLogger(ConfigGenerator.class);
 
     public List<ConfigDescriptor> generateConfigs(ExecutionContext executionContext) {
 
@@ -186,7 +191,7 @@ public class ConfigGenerator {
                         .withExecutionContext(executionContext)
                         .withQt2Port(port.nextPort())
                         .withP2pPort(port.nextPort())
-                        .withAdminPort(port.nextPort())
+                        //  .withAdminPort(port.nextPort())
                         .withEnclavePort(port.nextPort())
                         .withKeys(keyLookUp.get(1))
                         .withFeatureToggles(toggles)
@@ -200,7 +205,7 @@ public class ConfigGenerator {
                         .withExecutionContext(executionContext)
                         .withQt2Port(port.nextPort())
                         .withP2pPort(port.nextPort())
-                        .withAdminPort(port.nextPort())
+                        // .withAdminPort(port.nextPort())
                         .withEnclavePort(port.nextPort())
                         .withKeys(keyLookUp.get(2))
                         .withFeatureToggles(toggles)
@@ -214,7 +219,7 @@ public class ConfigGenerator {
                         .withExecutionContext(executionContext)
                         .withQt2Port(port.nextPort())
                         .withP2pPort(port.nextPort())
-                        .withAdminPort(port.nextPort())
+                        // .withAdminPort(port.nextPort())
                         .withEnclavePort(port.nextPort())
                         .withAlwaysSendTo(keyLookUp.get(1).keySet().iterator().next())
                         .withKeys(keyLookUp.get(3))
@@ -229,7 +234,7 @@ public class ConfigGenerator {
                         .withExecutionContext(executionContext)
                         .withQt2Port(port.nextPort())
                         .withP2pPort(port.nextPort())
-                        .withAdminPort(port.nextPort())
+                        // .withAdminPort(port.nextPort())
                         .withEnclavePort(port.nextPort())
                         .withKeys(keyLookUp.get(4))
                         .withFeatureToggles(toggles)
@@ -241,7 +246,16 @@ public class ConfigGenerator {
         third.addPeer(new Peer(fourth.getP2PServerConfig().getServerAddress()));
         fourth.addPeer(new Peer(first.getP2PServerConfig().getServerAddress()));
 
-        return Arrays.asList(first, second, third, fourth);
+        List<Config> configList = List.of(first, second, third, fourth);
+        if (LOGGER.isDebugEnabled()) {
+            configList.stream()
+                    .map(JaxbUtil::marshalToString)
+                    .forEach(
+                            s -> {
+                                LOGGER.debug(s);
+                            });
+        }
+        return configList;
     }
 
     public static void main(String[] args) throws Exception {
